unpackaged/main/default/objects/EBH_TargetedSeller__c/EBH_TargetedSeller__c.object-meta.xml
<CustomObject>
    <description>[EBH] (EBH-55), (EBH-103) - Distinct sellers that have been targeted. Targeted sellers that comes from DWH (Targeting Engine)</description>
    <label>Targeted Seller</label>
    <nameField>
        <displayFormat>TS - {0000000000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targeted Sellers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>