unpackaged/main/default/objects/EBH_TargetedSeller__c/fields/Campaign_Related_Seller_Details__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Related_Seller_Details__c</fullName>
    <description>US-0011717 - Enable new column &quot;Campaign Related Seller Details&quot; in the Target List to create/update Key metrics in campaign members</description>
    <label>Campaign Related Seller Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>