unpackaged/main/default/objects/EBH_TargetedSeller__c/fields/EBH_ExitCode__c.field-meta.xml
<CustomField>
    <fullName>EBH_ExitCode__c</fullName>
    <defaultValue>&#39;10&#39;</defaultValue>
    <description>[EBH] (EPH-5625) - to capture exit code Sellers that are &quot;Marketing Blacklist = TRUE&quot; will be flagged &quot;Exit Code&quot; = &quot;02&quot;
If not, Sellers that have 0 Contacts with &quot;Marketing Opt-in&quot; will be flagged &quot;Member Status&quot; = &quot;30)
If not, percentage of &quot;Control Group Size (%)&quot; Sellers will be flagged as &quot;Exit Code&quot; = &quot;10&quot;
Otherwise, all remaining Sellers are set to &quot;Exit Code&quot; = &quot;20&quot;</description>
    <label>Exit Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>