unpackaged/main/default/objects/EBH_TargetedSeller__c/fields/EBH_FirstResponseDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_FirstResponseDate__c</fullName>
    <description>[EBH] (EPH-5731) - to capture first response date i.e. the earliest of the First Response Date of related Contacts</description>
    <label>First Response Date</label>
    <type>Date</type>
</CustomField>