unpackaged/main/default/objects/EBH_TargetedSeller__c/fields/EBH_LastResponseDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_LastResponseDate__c</fullName>
    <description>[EBH] (EPH-5731) - to capture last response date i.e. the latest of the Last Response Date of related Contacts</description>
    <label>Last Response Date</label>
    <type>Date</type>
</CustomField>