unpackaged/main/default/objects/EBH_TargetedSeller__c/fields/EBH_NumberofContacts__c.field-meta.xml
<CustomField>
    <fullName>EBH_NumberofContacts__c</fullName>
    <description>[EBH] (EPH-5624)</description>
    <label>Number of Contacts</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>