unpackaged/main/default/objects/EBH_TargetedSeller__c/fields/EBH_Seller__c.field-meta.xml
<CustomField>
    <fullName>EBH_Seller__c</fullName>
    <description>[EBH] (EBH-55), (EBH-103) - Targeted seller lookup</description>
    <inlineHelpText>Targeted seller lookup</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Seller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Targeted Sellers</relationshipLabel>
    <relationshipName>EBH_TargetedSellers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>