unpackaged/main/default/objects/EBH_TargetedSeller__c/fields/EBH_SellerList__c.field-meta.xml
<CustomField>
    <fullName>EBH_SellerList__c</fullName>
    <description>[EBH] (EBH-55), (EBH-103) - Filter</description>
    <inlineHelpText>Filter</inlineHelpText>
    <label>Seller List</label>
    <referenceTo>EBH_Filter__c</referenceTo>
    <relationshipLabel>Targeted Sellers</relationshipLabel>
    <relationshipName>EBH_TargetedSellers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>