unpackaged/main/default/objects/EBH_TargetedSeller__c/fields/EBH_UniqueListSeller__c.field-meta.xml
<CustomField>
    <fullName>EBH_UniqueListSeller__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>[EBH] (EBH-55), (EBH-103) - Unique List Seller: Seller should be distinct in particular Seller List
31/07/2019:EPH-7650: removed uniqueness to allow duplicate seller</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique List Seller: Seller should be distinct in particular Seller List</inlineHelpText>
    <label>Unique List Seller</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>