unpackaged/main/default/objects/EBH_TargetedSeller__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>EPH-6850 Targeting Engine with Priority</description>
    <label>Priority</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>