unpackaged/main/default/objects/EBH_TargetedSeller__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EBH_SellerList__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>